2012-06-06  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/agentes/planned_downtime.php: fixed that 'Affect'
	column at 'planned downtime' may show bad values. cleaned
	source code style.

2012-06-05 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Fixed a missing group icons
	
	MERGED FROM 4.0.2

2012-06-04 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/agent.php: Fixed function search_agent when 
	metaconsole is activated an one of the nodes return no agents.

2012-06-04  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed bug: 
	Standard user can not add actions to an alert.

2012-06-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	include/functions_io.php: Added new safe string function
	to scape strings to use it in regular expressions and
	change the parameters of enterprise functions to be
	compatible con last changes
	Merged from 4.0.x

2012-06-04  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/os.list.php: Fixed bug: you can delete
	operating systems defined by default in the installation.

2012-06-04 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/min.png
	 images/max.png
	 images/sum.png
	 images/avg.png: Changed operators images in Global wizard report. 

2012-06-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/alerts/alert_list.builder.php: Fixed agent autocomplete
	in alert builder.

2012-06-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/massive/massive_edit_modules.php: Fixed group recursion 
	checkbox in massive module edition.
	
	Merged from branches.
	
2012-06-01  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_modules.php: Added units to
	module massive editor and missed help bubble in the same
	editor to post process field
	Merged from 4.0.x

2012-05-31 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/include/user.class.php: added option to get from url a