@@ -48,9 +48,9 @@ $end_date = get_parameter_post ('end_date', 0);
 $start_time = get_parameter_post ('start_time', 0);
 $end_time = get_parameter_post ('end_time', 0);
 $export_type = get_parameter_post ('export_type', 'data');
-$export_btn = get_parameter_post ('export_btn', 0);
+$export_btn = get_parameter ('export_btn', 0);
 
-if (!empty ($export_btn) && !empty ($module)) {
+if (!empty ($module)) {
 
 	// Disable SQL cache
 	global $sql_cache;
@@ -165,8 +165,9 @@ if (!empty ($export_btn) && !empty ($module)) {
 		
 }
 
-elseif (!empty ($export_btn) && empty ($module)) {
+else {
 	ui_print_error_message (__('No modules specified'));
 }
+
 
 ?>
